nhejazi published a site update

--- a/estimating-natural-and-interventional-effects.html
+++ b/estimating-natural-and-interventional-effects.html
@@ -70,8 +70,8 @@
 <p>Recall:</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="06-estimation-natural-interventional_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
+<img src="06-estimation-natural-interventional_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 2.1: Directed acyclic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
 <p>Assuming a binary <span class="math inline">\(A\)</span>, we define the natural direct effect as:
@@ -265,8 +265,8 @@ TML estimate of the NDE.</li>
 <p>Recall that in the presence of a intermediate confounder natural (in)direct effects are not identified</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-6"></span>
-<img src="06-estimation-natural-interventional_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 2.1: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
+<img src="06-estimation-natural-interventional_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 6.1: Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
 <!--
@@ -643,7 +643,7 @@ this next.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 03, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
