--- a/references.html
+++ b/references.html
@@ -67,6 +67,9 @@
 <div id="ref-kennedy2018nonparametric">
 <p>Kennedy, Edward H. 2018. “Nonparametric Causal Effects Based on Incremental Propensity Score Interventions.” <em>Journal of the American Statistical Association</em>, nos. just-accepted.</p>
 </div>
+<div id="ref-rudolph2020explaining">
+<p>Rudolph, Kara, Ivan Diaz, Nima Hejazi, Mark van der Laan, Sean Luo, Matisyahu Shulman, Aimee Campbell, John Rotrosen, and Edward Nunes. 2020. “Explaining Differential Effects of Medication for Opioid Use Disorder Using a Novel Approach Incorporating Mediating Variables.” <em>Addiction</em>.</p>
+</div>
 <div id="ref-vanderweele2016mediation">
 <p>VanderWeele, Tyler J. 2016. “Mediation Analysis: A Practitioner’s Guide.” <em>Annual Review of Public Health</em> 37: 17–32.</p>
 </div>
@@ -94,7 +97,7 @@
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 03, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
