--- a/stochastic.html
+++ b/stochastic.html
@@ -63,15 +63,15 @@
 <h1>
 <span class="header-section-number">4</span> Stochastic Direct and Indirect Effects<a class="anchor" aria-label="anchor" href="#stochastic"><i class="fas fa-link"></i></a>
 </h1>
-<div id="definition-of-the-effects-1" class="section level2">
+<div id="definition-of-the-effects" class="section level2">
 <h2>
-<span class="header-section-number">4.1</span> Definition of the effects<a class="anchor" aria-label="anchor" href="#definition-of-the-effects-1"><i class="fas fa-link"></i></a>
+<span class="header-section-number">4.1</span> Definition of the effects<a class="anchor" aria-label="anchor" href="#definition-of-the-effects"><i class="fas fa-link"></i></a>
 </h2>
 <p>Consider the following directed acyclic graph.</p>
 <div class="figure" style="text-align: center">
 <span id="fig:unnamed-chunk-1"></span>
-<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under no intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.1: Directed acylcic graph under no intermediate confounders of the mediator-outcome relation affected by treatment
+<img src="04-stochastic_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acyclic graph under no intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 2.1: Directed acyclic graph under no intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
 </div>
@@ -205,7 +205,7 @@ mediator is fixed at the value it would have taken under no intervention</li>
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
 <li><a class="nav-link" href="#stochastic"><span class="header-section-number">4</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="nav-link" href="#definition-of-the-effects-1"><span class="header-section-number">4.1</span> Definition of the effects</a></li>
+<li><a class="nav-link" href="#definition-of-the-effects"><span class="header-section-number">4.1</span> Definition of the effects</a></li>
 <li><a class="nav-link" href="#motivation-for-stochastic-interventions"><span class="header-section-number">4.2</span> Motivation for stochastic interventions</a></li>
 <li>
 <a class="nav-link" href="#definition-of-stochastic-effects"><span class="header-section-number">4.3</span> Definition of stochastic effects</a><ul class="nav navbar-nav">
@@ -232,7 +232,7 @@ mediator is fixed at the value it would have taken under no intervention</li>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 03, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
