--- a/estimands.html
+++ b/estimands.html
@@ -68,6 +68,12 @@
 <li>Natural direct and indirect effects</li>
 <li>Interventional direct and indirect effects</li>
 </ul>
+<div class="figure" style="text-align: center">
+<span id="fig:unnamed-chunk-1"></span>
+<img src="02-effects-def_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 2.1: Directed acyclic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
+</p>
+</div>
 <div id="controlled-direct-effects" class="section level2">
 <h2>
 <span class="header-section-number">2.1</span> Controlled direct effects<a class="anchor" aria-label="anchor" href="#controlled-direct-effects"><i class="fas fa-link"></i></a>
@@ -80,7 +86,10 @@
 <!--
 ID: If we are giving them the identifiability assumptions, should we not state
 the identification result also here?
---><div id="identification-assumptions" class="section level3">
+KER: sure! 
+--><p>Under the below identification assumptions, the controlled direct can be identified:
+<span class="math display">\[ \E(Y_{1,m} - Y_{0,m}) = \E_w\{\E(Y \mid 1, m, w) - \E(Y \mid 0, m, w)\}\]</span></p>
+<div id="identification-assumptions" class="section level3">
 <h3>
 <span class="header-section-number">2.1.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions"><i class="fas fa-link"></i></a>
 </h3>
@@ -126,11 +135,7 @@ indirect counterparts?</em></p>
 <h2>
 <span class="header-section-number">2.2</span> Natural direct and indirect effects<a class="anchor" aria-label="anchor" href="#natural-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
 </h2>
-<!--
-ID: Should we explicitly say here that this part assumes the first model
-without Z?  It could also be good to show the decomposition of the ATE (e.g.,
-show that Y_{a,M_a} = Y_a)
--->
+<p>Still using the same DAG as above,</p>
 <p>Natural direct effect (NDE):
 <span class="math display">\[\begin{equation*}
   \psi_{\text{NDE}} = \E(Y_{1,M_0} - Y_{0,M_0})
@@ -139,10 +144,8 @@ show that Y_{a,M_a} = Y_a)
 <span class="math display">\[\begin{equation*}
   \psi_{\text{NIE}} = \E(Y_{1,M_1} - Y_{1,M_0})
 \end{equation*}\]</span></p>
-<!--
-ID: The below is only true if the cross-world assumption holds
--->
-<p>The NDE can also be written as: <span class="math inline">\(\E_W \sum_m \{\E(Y_{1,m} \mid W) - \E(Y_{0,m} \mid W)\} \P(M_{0}=m \mid W)\)</span></p>
+<p>If the cross-world assumption holds (defined below), the NDE can also be written
+as: <span class="math inline">\(\E_W \sum_m \{\E(Y_{1,m} \mid W) - \E(Y_{0,m} \mid W)\} \P(M_{0}=m \mid W)\)</span></p>
 <ul>
 <li>Weighted average of controlled direct effects at each level of <span class="math inline">\(m\)</span>.
 <!--
@@ -151,7 +154,13 @@ assumption?  -->
 </li>
 <li>If no interaction between <span class="math inline">\(A\)</span> and <span class="math inline">\(M\)</span> on <span class="math inline">\(Y\)</span>, then CDE = NDE.</li>
 </ul>
-<div class="inline-figure"><img src="img/graphic4a.png" width="50%" style="display: block; margin: auto;"></div>
+<p><img src="img/graphic4a.png" width="50%" style="display: block; margin: auto;">
+Under the below identification assumptions, the natural direct effect can be identified:
+<span class="math display">\[\begin{equation*}
+\E(Y_{1,M_0} - Y_{0,M_0}) =
+  \E_w\{\sum_m \{\E(Y \mid 1, m, w) - \E(Y \mid 0, m, w)\} P(M=m \mid A=0,w)\}
+\end{equation*}\]</span>
+(The natural indirect effect can be identified similarly.)</p>
 <div id="identification-assumptions-1" class="section level3">
 <h3>
 <span class="header-section-number">2.2.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions-1"><i class="fas fa-link"></i></a>
@@ -196,12 +205,35 @@ NH: Should we mention cross-world indep and indentifiability issues in RCTs?
 <p><em>What if our data structure involves a post-treatment confounder of the
 mediator-outcome relationship (e.g., adherence)?</em></p>
 <div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-2"></span>
-<img src="02-effects-def_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.2: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
+<span id="fig:unnamed-chunk-3"></span>
+<img src="02-effects-def_files/figure-html/unnamed-chunk-3-1.png" alt="Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 1.2: Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
 <div class="inline-figure"><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;"></div>
+</div>
+<div id="unidentifiability-of-the-nde-and-nie-in-this-setting" class="section level3">
+<h3>
+<span class="header-section-number">2.2.3</span> Unidentifiability of the NDE and NIE in this setting<a class="anchor" aria-label="anchor" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><i class="fas fa-link"></i></a>
+</h3>
+<p>In this example, natural direct and indirect effects are
+unidentifiable from observed data on <span class="math inline">\((W,A,Z,M,Y)\)</span>. The technical
+reason for this is that the cross-world counterfactual assumption
+<span class="math display">\[\begin{equation*}
+  Y(1,m)\indep M(0)\mid W
+\end{equation*}\]</span></p>
+<p>does not hold in the above directed acyiclic graph. Intuitively, the
+reason for this is that an intervention setting <span class="math inline">\(A=1\)</span> (necessary for
+the definition of <span class="math inline">\(Y(1,m)\)</span>) induces a counterfactual variable
+<span class="math inline">\(Z(1)\)</span>. Likewise, an intervention setting <span class="math inline">\(A=0\)</span> (necessary for the
+definition of <span class="math inline">\(M(0)\)</span>) induces a counterfactual <span class="math inline">\(Z(0)\)</span>. The variables
+<span class="math inline">\(Z(1)\)</span> and <span class="math inline">\(Z(0)\)</span> are correlated because they share unmeasured common
+causes. The variable <span class="math inline">\(Z(1)\)</span> is correlated with <span class="math inline">\(Y(1,m)\)</span>, and the
+variable <span class="math inline">\(Z(0)\)</span> is correlated with <span class="math inline">\(M(0)\)</span>, because they are
+counterfactual outcomes in the same hypothetical worlds. Thus, to
+achieve <span class="math inline">\(Y(1,m)\)</span> independent of <span class="math inline">\(M(0)\)</span>, it would be necessary to
+adjust for either <span class="math inline">\(Z(1)\)</span> or <span class="math inline">\(Z(0)\)</span>. This is impossible to do since
+these variables are unmeasured.</p>
 </div>
 </div>
 <div id="interventional-indirect-effects" class="section level2">
@@ -217,23 +249,35 @@ for people reading this
 I think the distinction between fully conditional and not will be completely lost on people
 -->
 <ul>
-<li>Fully conditional on past</li>
-<li>Conditional SDE: <span class="math inline">\(\E(Y_{a, g_{M \mid Z, a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid Z, a^{\star}, W}})\)</span>
-</li>
-<li>Conditional SIE: <span class="math inline">\(\E(Y_{a, g_{M \mid Z, a, W}}) - \E(Y_{a, g_{M \mid Z, a^{\star}, W}})\)</span>
-</li>
-<li>Marginal SDE: <span class="math inline">\(\E(Y_{a, g_{M \mid a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid a^{\star}, W}})\)</span>
-</li>
-<li>Marginal SIE: <span class="math inline">\(\E(Y_{a, g_{M \mid a, W}}) - \E(Y_{a, g_{M \mid a^{\star}, W}})\)</span>
-</li>
-<li>Note that <span class="math inline">\(g_{M \mid Z, a^{\star}, W}\)</span>, <span class="math inline">\(g_{M \mid a^{\star}, W}\)</span> represents
+<li><p>Let <span class="math inline">\(G_{M \mid a, W}\)</span> denote a random draw from the distribution of <span class="math inline">\(M(a) \mid W\)</span></p></li>
+<li><p>Define the counterfactual <span class="math inline">\(Y(1,G_{M \mid 0, W})\)</span> as the counterfactual
+variable in a hypothetical world where <span class="math inline">\(A\)</span> is set <span class="math inline">\(A=1\)</span> and <span class="math inline">\(M\)</span> is
+set to <span class="math inline">\(M=G_{M \mid 0, W}\)</span> with porbability one.</p></li>
+<li><p>Define <span class="math inline">\(Y(0,G_{M \mid 0, W})\)</span> and <span class="math inline">\(Y(1,G_{M \mid 1, W})\)</span> similarly</p></li>
+<li><p>Then we can define:
+<span class="math display">\[\begin{equation*}
+  \E[Y(1,G_{M \mid 1, W}) - Y(0,G_{M \mid 0, W})] = \underbrace{\E[Y(1,G_{M \mid 1, W}) -
+    Y(1,G_{M \mid 0, W})]}_{\text{interventional indirect effect}} +
+    \underbrace{\E[Y(1,G_{M \mid 0, W}) -
+    Y(0,G_{M \mid 0, W})]}_{\text{interventional direct effect}}
+\end{equation*}\]</span></p></li>
+<li><p>Note that <span class="math inline">\(G_{M \mid a^{\star}, W}\)</span> represents a
 stochastic intervention on the mediator, where value <span class="math inline">\(m\)</span> is drawn with
-probability <span class="math inline">\(\P(M = m \mid Z, A = a^{\star}, W = w)\)</span>,
-<span class="math inline">\(\P(M = m \mid A = a^{\star}, W = w)\)</span>, respectively</li>
-<li>Can you think of an example when you would want the conditional versions?
-Marginal versions?</li>
+probability <span class="math inline">\(\P(M = m \mid A = a^{\star}, W = w)\)</span></p></li>
+<li><p>Marginal PIDE: <span class="math inline">\(\E(Y_{a, g_{M \mid a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid a^{\star}, W}})\)</span></p></li>
+<li><p>Marginal PIIE: <span class="math inline">\(\E(Y_{a, g_{M \mid a, W}}) - \E(Y_{a, g_{M \mid a^{\star}, W}})\)</span></p></li>
+<li><p>Conditional PIDE: <span class="math inline">\(\E(Y_{a, g_{M \mid Z, a^{\star}, W}}) - \E(Y_{a^{\star}, g_{M \mid Z, a^{\star}, W}})\)</span></p></li>
+<li><p>Conditional PIIE: <span class="math inline">\(\E(Y_{a, g_{M \mid Z, a, W}}) - \E(Y_{a, g_{M \mid Z, a^{\star}, W}})\)</span></p></li>
+<li><p>Can you think of an example when you would want the conditional versions?
+Marginal versions?</p></li>
 </ul>
 <div class="inline-figure"><img src="img/graphic4b.png" width="50%" style="display: block; margin: auto;"></div>
+<p>Under the following identification assumptions, the population interventional direct effect is identified:
+<span class="math display">\[\begin{equation*}
+\E(Y_{1, g_{M \mid 0, W}}) - \E(Y_{0, g_{M \mid 0, W}}) = \E_w \{\sum_{z,m}
+  \{\E(Y \mid 1, z, m, w) P(z \mid 1, w) - \E(Y \mid 1, z, m, w)
+  P(z \mid 0, w)\} P(m \mid A=0, w) \}
+\end{equation*}\]</span></p>
 <div id="identification-assumptions-2" class="section level3">
 <h3>
 <span class="header-section-number">2.3.1</span> Identification assumptions:<a class="anchor" aria-label="anchor" href="#identification-assumptions-2"><i class="fas fa-link"></i></a>
@@ -258,85 +302,7 @@ effect.</li>
 <span class="header-section-number">2.4</span> Estimand Summary<a class="anchor" aria-label="anchor" href="#estimand-summary"><i class="fas fa-link"></i></a>
 </h2>
 <div class="inline-figure"><img src="img/table1.png" width="125%" style="display: block; margin: auto;"></div>
-<!--
-ID: Kara, I copied what I had written below, feel free to reuse/modify
--->
-</div>
-<div id="interventional" class="section level2">
-<h2>
-<span class="header-section-number">2.5</span> The Interventional Direct and Indirect Effects<a class="anchor" aria-label="anchor" href="#interventional"><i class="fas fa-link"></i></a>
-</h2>
-<div id="definition-of-the-effects" class="section level3">
-<h3>
-<span class="header-section-number">2.5.1</span> Definition of the effects<a class="anchor" aria-label="anchor" href="#definition-of-the-effects"><i class="fas fa-link"></i></a>
-</h3>
-<p>Consider the following directed acyclic graph.</p>
-<div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-6"></span>
-<img src="02-effects-def_files/figure-html/unnamed-chunk-6-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 2.1: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
-</p>
-</div>
-<p>Here, <span class="math inline">\(A\)</span> is the treatment of interest, <span class="math inline">\(M\)</span> is the mediator of
-interest, <span class="math inline">\(W\)</span> is a pre-treatment variable containing confounders of
-<span class="math inline">\(A\)</span> on <span class="math inline">\(M\)</span> and <span class="math inline">\(Y\)</span>,and <span class="math inline">\(Z\)</span> is a post-treatment variable contaning
-confounders of the mediator and the exposure which are affected by
-treatment.</p>
-</div>
-<div id="example" class="section level3">
-<h3>
-<span class="header-section-number">2.5.2</span> Example<a class="anchor" aria-label="anchor" href="#example"><i class="fas fa-link"></i></a>
-</h3>
-<p>[TO FILL IN]</p>
-</div>
-<div id="unidentifiability-of-the-nde-and-nie-in-this-setting" class="section level3">
-<h3>
-<span class="header-section-number">2.5.3</span> Unidentifiability of the NDE and NIE in this setting<a class="anchor" aria-label="anchor" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><i class="fas fa-link"></i></a>
-</h3>
-<p>In this example, natural direct and indirect effects are
-unidentifiable from observed data on <span class="math inline">\((W,A,Z,M,Y)\)</span>. The technical
-reason for this is that the cross-world counterfactual assumption
-<span class="math display">\[\begin{equation*}
-  Y(1,m)\indep M(0)\mid W
-\end{equation*}\]</span></p>
-<p>does not hold in the aboce directed acyiclic graph. Intuitively, the
-reason for this is that an intervention setting <span class="math inline">\(A=1\)</span> (necessary for
-the definition of <span class="math inline">\(Y(1,m)\)</span>) induces a counterfactual variable
-<span class="math inline">\(Z(1)\)</span>. Likewise, an intervention setting <span class="math inline">\(A=0\)</span> (necessary for the
-definition of <span class="math inline">\(M(0)\)</span>) induces a counterfactual <span class="math inline">\(Z(0)\)</span>. The variables
-<span class="math inline">\(Z(1)\)</span> and <span class="math inline">\(Z(0)\)</span> are correlated because they share unmeasured common
-causes. The variable <span class="math inline">\(Z(1)\)</span> is correlated with <span class="math inline">\(Y(1,m)\)</span>, and the
-variable <span class="math inline">\(Z(0)\)</span> is correlated with <span class="math inline">\(M(0)\)</span>, because they are
-counterfactual outcomes in the same hypothetical worlds. Thus, to
-achieve <span class="math inline">\(Y(1,m)\)</span> independent of <span class="math inline">\(M(0)\)</span>, it would be necessary to
-adjust for either <span class="math inline">\(Z(1)\)</span> or <span class="math inline">\(Z(0)\)</span>. This is impossible to do since
-these variables are unmeasured.</p>
-</div>
-<div id="recovering-direct-and-indirect-effects" class="section level3">
-<h3>
-<span class="header-section-number">2.5.4</span> Recovering direct and indirect effects<a class="anchor" aria-label="anchor" href="#recovering-direct-and-indirect-effects"><i class="fas fa-link"></i></a>
-</h3>
-<p>Even though estimation of the NDE and NIE is not possible in the
-apresence of confounders of the mediation-outcome relation affected by
-treatment, it is possible to redefine the effects in a way such that
-they are identifiable. Specifically:</p>
-<ul>
-<li>Let <span class="math inline">\(G(a)\)</span> denote a random draw from the distribution of <span class="math inline">\(M(a) \mid W\)</span>
-</li>
-<li>Define the counterfactual <span class="math inline">\(Y(1,G(0))\)</span> as the counterfactual
-variable in a hypothetical world where <span class="math inline">\(A\)</span> is set <span class="math inline">\(A=1\)</span> and <span class="math inline">\(M\)</span> is
-set to <span class="math inline">\(M=G(0)\)</span> with porbability one.</li>
-<li>Define <span class="math inline">\(Y(0,G(0))\)</span> and <span class="math inline">\(Y(1,G(1))\)</span> similarly</li>
-<li>Then we can define:
-<span class="math display">\[\begin{equation*}
-  \E[Y(1,G(1)) - Y(0,G(0))] = \underbrace{\E[Y(1,G(1)) -
-    Y(1,G(0))]}_{\text{interventional indirect effect}} +
-    \underbrace{\E[Y(1,G(0)) -
-    Y(0,G(0))]}_{\text{interventional direct effect}}
-\end{equation*}\]</span>
-</li>
-</ul>
-</div>
+
 </div>
 </div>
   <div class="chapter-nav">
@@ -356,20 +322,13 @@ set to <span class="math inline">\(M=G(0)\)</span> with porbability one.</li>
 <a class="nav-link" href="#natural-direct-and-indirect-effects"><span class="header-section-number">2.2</span> Natural direct and indirect effects</a><ul class="nav navbar-nav">
 <li><a class="nav-link" href="#identification-assumptions-1"><span class="header-section-number">2.2.1</span> Identification assumptions:</a></li>
 <li><a class="nav-link" href="#is-this-the-estimand-i-want-1"><span class="header-section-number">2.2.2</span> Is this the estimand I want?</a></li>
+<li><a class="nav-link" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><span class="header-section-number">2.2.3</span> Unidentifiability of the NDE and NIE in this setting</a></li>
 </ul>
 </li>
 <li>
 <a class="nav-link" href="#interventional-indirect-effects"><span class="header-section-number">2.3</span> Interventional (in)direct effects</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#identification-assumptions-2"><span class="header-section-number">2.3.1</span> Identification assumptions:</a></li></ul>
 </li>
 <li><a class="nav-link" href="#estimand-summary"><span class="header-section-number">2.4</span> Estimand Summary</a></li>
-<li>
-<a class="nav-link" href="#interventional"><span class="header-section-number">2.5</span> The Interventional Direct and Indirect Effects</a><ul class="nav navbar-nav">
-<li><a class="nav-link" href="#definition-of-the-effects"><span class="header-section-number">2.5.1</span> Definition of the effects</a></li>
-<li><a class="nav-link" href="#example"><span class="header-section-number">2.5.2</span> Example</a></li>
-<li><a class="nav-link" href="#unidentifiability-of-the-nde-and-nie-in-this-setting"><span class="header-section-number">2.5.3</span> Unidentifiability of the NDE and NIE in this setting</a></li>
-<li><a class="nav-link" href="#recovering-direct-and-indirect-effects"><span class="header-section-number">2.5.4</span> Recovering direct and indirect effects</a></li>
-</ul>
-</li>
 </ul>
 
       <div class="book-extra">
@@ -387,7 +346,7 @@ set to <span class="math inline">\(M=G(0)\)</span> with porbability one.</li>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 03, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
