--- a/mediation.html
+++ b/mediation.html
@@ -63,12 +63,12 @@
 <h1>
 <span class="header-section-number">1</span> Preliminaries on causal mediation analysis<a class="anchor" aria-label="anchor" href="#mediation"><i class="fas fa-link"></i></a>
 </h1>
-<div id="motivating-studies" class="section level2">
+<div id="motivating-study" class="section level2">
 <h2>
-<span class="header-section-number">1.1</span> Motivating studies<a class="anchor" aria-label="anchor" href="#motivating-studies"><i class="fas fa-link"></i></a>
+<span class="header-section-number">1.1</span> Motivating study<a class="anchor" aria-label="anchor" href="#motivating-study"><i class="fas fa-link"></i></a>
 </h2>
-<p>[TO FILL IN (KARA?). IDEALLY THESE WOULD BE TWO OR THREE EXAMPLES THAT WE CAN
-USE THROUGHOUT THE WORKSHOP FOR ALL EFFECTS]</p>
+<p>Do differences in the effects of treatment (comparing two medications for opioid use disorder, naltrexone vs buprenorphine) on risk of relapse operate through mediators of adherence, opioid use, pain, and depressive symptoms? <span class="citation">(Rudolph et al. <a href="references.html#ref-rudolph2020explaining" role="doc-biblioref">2020</a>)</span></p>
+<div class="inline-figure"><img src="img/ctndag.png" width="50%" style="display: block; margin: auto;"></div>
 </div>
 <div id="what-is-causal-mediation-analysis" class="section level2">
 <h2>
@@ -86,9 +86,8 @@ standard statistical mediation analyses</li>
 <span class="header-section-number">1.2.1</span> An example of a non-causal mediation analysis (product of coefficients)<a class="anchor" aria-label="anchor" href="#an-example-of-a-non-causal-mediation-analysis-product-of-coefficients"><i class="fas fa-link"></i></a>
 </h3>
 <ul>
-<li>Assume you are interested in the effect of a treatment <span class="math inline">\(A\)</span> ([FILL IN FROM
-MOTIVATING EXAMPLE]) on an outcome <span class="math inline">\(Y\)</span> ([FILL IN]) through a mediator <span class="math inline">\(M\)</span>
-([FILL IN])</li>
+<li>Assume you are interested in the effect of a treatment <span class="math inline">\(A\)</span> (naltrexone vs. buprenorphine) on an outcome <span class="math inline">\(Y\)</span> (risk of relapse) through mediators <span class="math inline">\(M\)</span>
+(adherence, opioid use, pain, depressive symptoms)</li>
 <li>We could fit the following models:
 <span class="math display">\[\begin{align}
     \E(Y\mid A=a) &amp; = \alpha_0 + \alpha_1 a\\
@@ -97,7 +96,7 @@ MOTIVATING EXAMPLE]) on an outcome <span class="math inline">\(Y\)</span> ([FILL
   \end{align}\]</span>
 </li>
 <li>The product <span class="math inline">\((\gamma_1\beta_1)\)</span> has been proposed as a measure of the effect
-of <span class="math inline">\(X\)</span> on <span class="math inline">\(Y\)</span> through <span class="math inline">\(M\)</span>
+of <span class="math inline">\(A\)</span> on <span class="math inline">\(Y\)</span> through <span class="math inline">\(M\)</span>
 </li>
 <li>Causal interpretation problems with this method:
 <ul>
@@ -128,9 +127,9 @@ confounding issues. We will focus on the two types of graph:</p>
 <span class="header-section-number">1.3.1</span> No intermediate confounders<a class="anchor" aria-label="anchor" href="#no-intermediate-confounders"><i class="fas fa-link"></i></a>
 </h3>
 <div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-1"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-1-1.png" alt="Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
+<span id="fig:unnamed-chunk-2"></span>
+<img src="01-preface_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acyclic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 1.1: Directed acyclic graph under <em>no intermediate confounders</em> of the mediator-outcome relation affected by treatment
 </p>
 </div>
 </div>
@@ -139,9 +138,9 @@ FIGURE 1.1: Directed acylcic graph under <em>no intermediate confounders</em> of
 <span class="header-section-number">1.3.2</span> Intermediate confounders<a class="anchor" aria-label="anchor" href="#intermediate-confounders"><i class="fas fa-link"></i></a>
 </h3>
 <div class="figure" style="text-align: center">
-<span id="fig:unnamed-chunk-2"></span>
-<img src="01-preface_files/figure-html/unnamed-chunk-2-1.png" alt="Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
-FIGURE 1.2: Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment
+<span id="fig:unnamed-chunk-3"></span>
+<img src="01-preface_files/figure-html/unnamed-chunk-3-1.png" alt="Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment" width="80%"><p class="caption">
+FIGURE 1.2: Directed acyclic graph under intermediate confounders of the mediator-outcome relation affected by treatment
 </p>
 </div>
 <p>The above graphs can be interpreted as a <em>non-parametric structural equation model</em>
@@ -223,7 +222,7 @@ taken under no treatment</em>
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
 <li><a class="nav-link" href="#mediation"><span class="header-section-number">1</span> Preliminaries on causal mediation analysis</a></li>
-<li><a class="nav-link" href="#motivating-studies"><span class="header-section-number">1.1</span> Motivating studies</a></li>
+<li><a class="nav-link" href="#motivating-study"><span class="header-section-number">1.1</span> Motivating study</a></li>
 <li>
 <a class="nav-link" href="#what-is-causal-mediation-analysis"><span class="header-section-number">1.2</span> What is causal mediation analysis?</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#an-example-of-a-non-causal-mediation-analysis-product-of-coefficients"><span class="header-section-number">1.2.1</span> An example of a non-causal mediation analysis (product of coefficients)</a></li></ul>
 </li>
@@ -253,7 +252,7 @@ taken under no treatment</em>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: April 29, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 03, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
