nhejazi published a site update

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@ modern methods for <em>causal mediation analysis</em>, given at the <a href="htt
 Meeting</a> on
 Monday, 24 May 2021. While we encourage use of this <code>bookdown</code> site, for
 convenience, we have also made these workshop materials <a href="https://code.nimahejazi.org/ser2021_mediation_workshop/ser2021mediation.pdf">available in
-PDF</a>.</p>
+PDF</a>.
+Discussion will take place <em>on Slack</em> – first join the workspace
+<a href="https://join.slack.com/t/moderncausalmediation/shared_invite/zt-qd2ocx45-XlKvMA9FXlsixnwI7VnbHQ">here</a>,
+then the “#ser2021” channel.</p>
 <div id="about" class="section level2">
 <h2>
 <span class="header-section-number">0.1</span> About this workshop<a class="anchor" aria-label="anchor" href="#about"><i class="fas fa-link"></i></a>
@@ -100,29 +103,24 @@ parameter estimable from the observed data distribution). Familiarity with the
 <span class="header-section-number">0.2</span> Workshop schedule<a class="anchor" aria-label="anchor" href="#schedule"><i class="fas fa-link"></i></a>
 </h2>
 <ul>
-<li>10:00A-10:30A: introductions/mediation set up
-<!-- Ivan-->
+<li>10:00A-10:30A: introductions/mediation set up <!-- Ivan-->
 </li>
-<li>10:30A-11:15A: controlled direct effects, natural direct and indirect effects, interventional direct and indirect effects
-<!-- Kara-->
+<li>10:30A-11:15A: controlled direct effects, natural direct and indirect effects,
+interventional direct and indirect effects <!-- Kara-->
 </li>
-<li>11:15A-11:45A: stochastic mediation estimands
-<!-- Nima-->
+<li>11:15A-11:45A: stochastic mediation estimands <!-- Nima-->
 </li>
-<li>11:45A-12:00P: how to choose an estimand in real-world examples
-<!-- Kara-->
+<li>11:45A-12:00P: how to choose an estimand in real-world examples <!-- Kara-->
 </li>
 <li>12:00P-12:15P break/discussion</li>
-<li>12:15P-12:45P: what is the EIF
-<!-- Ivan-->
+<li>12:15P-12:45P: what is the EIF <!-- Ivan-->
 </li>
-<li>12:45P-01:00P: using the EIF for estimating the natural direct effect
-<!-- Ivan-->
+<li>12:45P-01:00P: using the EIF for estimating the natural direct
+effect <!-- Ivan-->
 </li>
-<li>01:00P-01:45P: practice: <code>R</code> code for estimation
-<!-- Nima-->
+<li>01:00P-01:45P: practice: <code>R</code> code for estimation <!-- Nima-->
 </li>
-<li>01:45P-02:00P wrap up</li>
+<li>01:45P-02:00P: Wrap-up</li>
 </ul>
 <p><strong>NOTE: All times listed in Pacific Time.</strong></p>
 </div>
@@ -133,13 +131,12 @@ parameter estimable from the observed data distribution). Familiarity with the
 <div id="iván-díaz" class="section level3 unnumbered">
 <h3>Iván Díaz<a class="anchor" aria-label="anchor" href="#iv%C3%A1n-d%C3%ADaz"><i class="fas fa-link"></i></a>
 </h3>
-<p>I am an Assistant Professor at Weill Cornel Medicine. My research
-focuses on the development of non-parametric statistical methods for
-causal inference from observational and randomized studies with
-complex datasets, using machine learning. This includes but is not
-limited to mediation analysis, methods for continuous exposures,
-longitudinal data including survival analysis, and efficiency
-guarantees with covariate adjustment in randomized trials. I am also
+<p>I am an Assistant Professor at Weill Cornel Medicine. My research focuses on the
+development of non-parametric statistical methods for causal inference from
+observational and randomized studies with complex datasets, using machine
+learning. This includes but is not limited to mediation analysis, methods for
+continuous exposures, longitudinal data including survival analysis, and
+efficiency guarantees with covariate adjustment in randomized trials. I am also
 interested in general semi-parametric theory, machine learning, and
 high-dimensional data.</p>
 </div>
@@ -149,13 +146,11 @@ high-dimensional data.</p>
 <p>I am a PhD candidate in biostatistics at UC Berkeley, working under the joint
 direction of Mark van der Laan and Alan Hubbard. My research interests fall at
 the intersection of causal inference and machine learning, drawing on ideas from
-non/semi-parametric estimation in large, flexible statistical models to develop
-efficient and robust statistical procedures for evaluating complex target
-estimands in observational and randomized studies. Particular areas of current
-emphasis include causal mediation/path analysis, outcome-dependent sampling
-designs, targeted loss-based estimation, and applications in vaccine efficacy
-trials. I am also passionate about statistical computing and open source
-software development for applied statistics.</p>
+non/semi-parametric estimation in large, flexible statistical models. Particular
+areas of current emphasis include causal mediation analysis, corrections for
+outcome-dependent sampling designs, targeted loss-based estimation, and
+applications in vaccine efficacy trials. I am also passionate about statistical
+computing and open source software development for applied statistics.</p>
 </div>
 <div id="kara-rudolph" class="section level3 unnumbered">
 <h3>Kara Rudolph<a class="anchor" aria-label="anchor" href="#kara-rudolph"><i class="fas fa-link"></i></a>
@@ -341,7 +336,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 12, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 15, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
