--- a/stochastic.html
+++ b/stochastic.html
@@ -347,7 +347,7 @@ identifiability assumptions hold, at least in principle</li>
 confounders <span class="citation">(Hejazi et al. <a href="references.html#ref-hejazi2020nonparametric" role="doc-biblioref">2020</a>)</span>
 </li>
 <li>
-<code>R</code> implementation to be released soon, stay tuned!</li>
+<code>R</code> implementation to be released soon…stay tuned!</li>
 </ul>
 </li>
 </ul>
@@ -398,7 +398,7 @@ right? So probably wouldn't want to get into that.
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 12, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 15, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
