nhejazi published a site update

--- a/estimandirl.html
+++ b/estimandirl.html
@@ -67,8 +67,10 @@
 <h2>
 <span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)<a class="anchor" aria-label="anchor" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><i class="fas fa-link"></i></a>
 </h2>
+<div class="inline-figure"><img src="img/ctndag.png" width="100%" style="display: block; margin: auto;"></div>
 <p><em>Motivation</em>: Opposite overall treatment effects for homeless versus
 nonhomeless participants.</p>
+<div class="inline-figure"><img src="img/tmleesttotal.png" width="50%" style="display: block; margin: auto;"></div>
 <div id="getting-specific-about-the-question" class="section level3">
 <h3>
 <span class="header-section-number">4.1.1</span> Getting specific about the question<a class="anchor" aria-label="anchor" href="#getting-specific-about-the-question"><i class="fas fa-link"></i></a>
@@ -153,7 +155,7 @@ for homeless and nonhomeless individuals?</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 15, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 16, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
