--- a/index.html
+++ b/index.html
@@ -176,6 +176,135 @@ target available policy and program resources.</p>
 and the complete source is available on
 <a href="https://github.com/tlverse/tlverse-handbook">GitHub</a>. This version of the book
 was built with R version 4.0.5 (2021-03-31), <a href="https://pandoc.org/">pandoc</a> version <code>r rmarkdown::pandoc_version()</code>, and the following packages:</p>
+<div class="inline-table"><table class="table table-sm">
+<thead><tr class="header">
+<th align="left">package</th>
+<th align="left">version</th>
+<th align="left">source</th>
+</tr></thead>
+<tbody>
+<tr class="odd">
+<td align="left">bookdown</td>
+<td align="left">0.21.11</td>
+<td align="left">Github (rstudio/bookdown@33c4f70)</td>
+</tr>
+<tr class="even">
+<td align="left">bslib</td>
+<td align="left">0.2.4.9003</td>
+<td align="left">Github (rstudio/bslib@e09af88)</td>
+</tr>
+<tr class="odd">
+<td align="left">dagitty</td>
+<td align="left">0.3-1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">data.table</td>
+<td align="left">1.14.0</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">downlit</td>
+<td align="left">0.2.1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">dplyr</td>
+<td align="left">1.0.6</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">ggdag</td>
+<td align="left">0.2.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">ggfortify</td>
+<td align="left">0.4.11</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">ggplot2</td>
+<td align="left">3.3.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">kableExtra</td>
+<td align="left">1.3.4</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">knitr</td>
+<td align="left">1.32</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">magick</td>
+<td align="left">2.7.1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">medoutcon</td>
+<td align="left">0.1.5</td>
+<td align="left">Github (nhejazi/medoutcon@39820e2)</td>
+</tr>
+<tr class="even">
+<td align="left">medshift</td>
+<td align="left">0.1.4</td>
+<td align="left">Github (nhejazi/medshift@f9e11a9)</td>
+</tr>
+<tr class="odd">
+<td align="left">mvtnorm</td>
+<td align="left">1.1-1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">origami</td>
+<td align="left">1.0.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">pdftools</td>
+<td align="left">2.3.1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">readr</td>
+<td align="left">1.4.0</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">rmarkdown</td>
+<td align="left">2.7.11</td>
+<td align="left">Github (rstudio/rmarkdown@e340d75)</td>
+</tr>
+<tr class="even">
+<td align="left">skimr</td>
+<td align="left">2.1.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">sl3</td>
+<td align="left">1.4.3</td>
+<td align="left">Github (tlverse/sl3@5cddc6c)</td>
+</tr>
+<tr class="even">
+<td align="left">stringr</td>
+<td align="left">1.4.0</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="odd">
+<td align="left">tibble</td>
+<td align="left">3.1.1</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+<tr class="even">
+<td align="left">tidyr</td>
+<td align="left">1.1.3</td>
+<td align="left">CRAN (R 4.0.5)</td>
+</tr>
+</tbody>
+</table></div>
 </div>
 <div id="setup" class="section level2">
 <h2>
@@ -336,7 +465,7 @@ Data</a>.</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 15, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 16, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
