--- a/estimandirl.html
+++ b/estimandirl.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Chapter 4 How to choose an estimand: Real world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
+<title>Chapter 4 How to choose an estimand: Real-world example | [SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</title>
 <meta name="author" content="Iván Díaz, Nima Hejazi, Kara Rudolph">
 <!-- JS --><script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js" integrity="sha256-inc5kl9MA1hkeYUt+EC3BhlIgyp/2jDIyBLS6k3UxPI=" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script><script src="https://kit.fontawesome.com/6ecbd6c532.js" crossorigin="anonymous"></script><script src="libs/jquery-3.5.1/jquery-3.5.1.min.js"></script><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="libs/bootstrap-4.6.0/bootstrap.min.css" rel="stylesheet">
@@ -44,13 +44,13 @@
       <nav aria-label="Table of contents"><h2>Table of contents</h2>
         <ul class="book-toc list-unstyled">
 <li><a class="" href="index.html">Welcome to SER!</a></li>
-<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Preliminaries on causal mediation analysis</a></li>
-<li><a class="" href="estimands.html"><span class="header-section-number">2</span> Path-specific casual mediation effect types</a></li>
+<li><a class="" href="mediation.html"><span class="header-section-number">1</span> Causal mediation analysis intro</a></li>
+<li><a class="" href="estimands.html"><span class="header-section-number">2</span> Types of path-specific causal mediation effects</a></li>
 <li><a class="" href="stochastic.html"><span class="header-section-number">3</span> Stochastic Direct and Indirect Effects</a></li>
-<li><a class="active" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="active" href="estimandirl.html"><span class="header-section-number">4</span> How to choose an estimand: Real-world example</a></li>
 <li><a class="" href="preliminaries-on-semiparametric-estimation.html"><span class="header-section-number">5</span> Preliminaries on semiparametric estimation</a></li>
 <li><a class="" href="using-the-eif-to-construct-an-estimator-the-case-of-the-natural-direct-effect.html"><span class="header-section-number">6</span> Using the EIF to construct an estimator: the case of the natural direct effect</a></li>
-<li><a class="" href="estimating-indirect-effects-with-r-packages.html"><span class="header-section-number">7</span> Estimating (in)direct effects with R packages</a></li>
+<li><a class="" href="r-packages-for-estimation-of-the-causal-indirect-effects.html"><span class="header-section-number">7</span> R packages for estimation of the causal (in)direct effects</a></li>
 <li><a class="" href="references.html">References</a></li>
 </ul>
 
@@ -61,7 +61,7 @@
 </div>
   </header><main class="col-sm-12 col-md-9 col-lg-7" id="content"><div id="estimandirl" class="section level1">
 <h1>
-<span class="header-section-number">4</span> How to choose an estimand: Real world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
+<span class="header-section-number">4</span> How to choose an estimand: Real-world example<a class="anchor" aria-label="anchor" href="#estimandirl"><i class="fas fa-link"></i></a>
 </h1>
 <div id="comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud" class="section level2">
 <h2>
@@ -134,7 +134,7 @@ for homeless and nonhomeless individuals?</p>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
     <nav id="toc" data-toggle="toc" aria-label="On this page"><h2>On this page</h2>
       <ul class="nav navbar-nav">
-<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">4</span> How to choose an estimand: Real world example</a></li>
+<li><a class="nav-link" href="#estimandirl"><span class="header-section-number">4</span> How to choose an estimand: Real-world example</a></li>
 <li>
 <a class="nav-link" href="#comparative-effectivness-of-two-medications-for-opioid-use-disorder-oud"><span class="header-section-number">4.1</span> Comparative effectivness of two medications for opioid use disorder (OUD)</a><ul class="nav navbar-nav"><li><a class="nav-link" href="#getting-specific-about-the-question"><span class="header-section-number">4.1.1</span> Getting specific about the question</a></li></ul>
 </li>
@@ -155,7 +155,7 @@ for homeless and nonhomeless individuals?</p>
 <footer class="bg-primary text-light mt-5"><div class="container"><div class="row">
 
   <div class="col-12 col-md-6 mt-3">
-    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 16, 2021.</p>
+    <p>"<strong>[SER 2021 Workshop] Causal Mediation: Modern Methods for Path Analysis</strong>" was written by Iván Díaz, Nima Hejazi, Kara Rudolph. It was last built on updated: May 17, 2021.</p>
   </div>
 
   <div class="col-12 col-md-6 mt-3">
