kararudolph published a site update

--- a/index.html
+++ b/index.html
@@ -1149,22 +1149,22 @@ parameter estimable from the observed data distribution). Familiarity with the
 <div id="schedule" class="section level2">
 <h2><span class="header-section-number">0.2</span> Workshop schedule</h2>
 <ul>
-<li>09:00A-09:30A: Introductions + mediation set-up
-<!-- Ivan--></li>
-<li>09:30A-10:15A: Controlled direct effects, natural direct/indirect effects,
+<li>09:00A-09:15A: Introductions + mediation set-up
+<!-- Ivan, 15 min--></li>
+<li>09:15A-10:00A: Controlled direct effects, natural direct/indirect effects,
 interventional direct/indirect effects
-<!-- Kara--></li>
-<li>10:15A-10:45A: Stochastic mediation estimands
-<!-- Nima--></li>
-<li>10:45A-11:00A: Choosing an estimand in real-world examples
-<!-- Kara--></li>
-<li>11:00A-11:15A: Break + discussion</li>
-<li>11:15A-11:45A: What is the EIF?!
-<!-- Ivan--></li>
-<li>11:45A-12:00P: Using the EIF for estimating the natural direct effect
-<!-- Ivan--></li>
+<!-- Kara, 30--></li>
+<li>10:00A-10:20A: Stochastic mediation estimands
+<!-- Nima, 15--></li>
+<li>10:20A-10:40A: Choosing an estimand in real-world examples
+<!-- Kara, 10--></li>
+<li>10:40A-10:50A: Break + discussion</li>
+<li>10:50A-11:30A: What is the EIF?!
+<!-- Ivan, 35--></li>
+<li>11:30A-12:00P: Using the EIF for estimating the natural direct effect
+<!-- Ivan, 30--></li>
 <li>12:00P-12:45P: Example walkthrough with <code>R</code> packages for effect estimation
-<!-- Nima--></li>
+<!-- Nima, 45--></li>
 <li>12:45P-01:00P: Wrap-up</li>
 </ul>
 <p><strong>NOTE: All times listed in Pacific Time.</strong></p>
